--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,24 +1,26 @@
+//theme light
 $color1: #FFFFFF;//white
 $color2: #79af2f;//green
 $color3: #64646C;//gray
-$color4: #d2d2d2;//background color
-
+$color4: #f2f5f8;//background color
+//theme dark
 $color-dark1: #000000;//black
 $color-dark2: #527e14;//green
 $color-dark3: #363636;//gray
 $color-dark4: #424242;//background color
+//#f2f5f8
+$color-link: #0096c7;
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
     display: none;
   }
-  
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .example {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
 
+a{
+    text-decoration: none !important;
+    color: $color-link !important;
+}
+  
 $footerheight : 100px;
 .footer-height
 {
@@ -28,6 +30,11 @@ $footerheight : 100px;
 .left-bar-height
 {
     height: calc(100vh - #{$footerheight}) !important;
+}
+
+.color-link
+{
+    color: $color-link !important;
 }
 
 .theme--light
@@ -56,7 +63,7 @@ $footerheight : 100px;
     {
         background-color: $color3 !important;
     }
-    .bg-color4
+    &.condux.bg-color4, .bg-color4
     {
         background-color: $color4 !important;
     }
@@ -92,7 +99,7 @@ $footerheight : 100px;
     {
         background-color: $color-dark3 !important;
     }
-    .bg-color4
+    &.condux.bg-color4, .bg-color4
     {
         background-color: $color-dark4 !important;
     }
