--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -47,7 +47,7 @@ $footerheight : 100px;
         background-color: $color2 !important;
         border-color: $color2 !important;
     }
-    .color2
+    .color2 ,.left-link a
     {
         color: $color2 !important;
     }
@@ -83,7 +83,7 @@ $footerheight : 100px;
         background-color: $color-dark2  !important;
         border-color: $color-dark2  !important;
     }
-    .color2
+    .color2,.left-link a
     {
         color: $color2 !important;
     }
