--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,7 @@ $color-dark3: #363636;//gray
 $color-dark4: #424242;//background color
 //#f2f5f8
 $color-link: #0096c7;
+$footerheight : 60px;
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
@@ -21,7 +22,6 @@ a{
     color: $color-link !important;
 }
   
-$footerheight : 100px;
 .footer-height
 {
     height: $footerheight;
@@ -47,7 +47,11 @@ $footerheight : 100px;
         background-color: $color2 !important;
         border-color: $color2 !important;
     }
-    .color2 ,.left-link a
+    .color1, .v-data-footer button:not(.v-btn--disabled)
+    {
+        color: $color1 !important;
+    }
+    .color2 ,.left-link a, tbody button
     {
         color: $color2 !important;
     }
@@ -55,7 +59,7 @@ $footerheight : 100px;
     {
         background-color: $color1 !important;
     }
-    .bg-color2
+    .bg-color2, .v-data-footer button:not(.v-btn--disabled)
     {
         background-color: $color2 !important;
     }
@@ -83,7 +87,11 @@ $footerheight : 100px;
         background-color: $color-dark2  !important;
         border-color: $color-dark2  !important;
     }
-    .color2,.left-link a
+    .color1, .v-data-footer button:not(.v-btn--disabled)
+    {
+        color: $color1 !important;
+    }
+    .color2,.left-link a, tbody button
     {
         color: $color2 !important;
     }
@@ -91,7 +99,7 @@ $footerheight : 100px;
     {
         background-color: $color-dark1 !important;
     }
-    .bg-color2
+    .bg-color2, .v-data-footer button:not(.v-btn--disabled)
     {
         background-color: $color-dark2 !important;
     }
