--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,18 +1,20 @@
 //theme light
 $color1: #FFFFFF;//white
 $color2: #79af2f;//green
+$color2-lighten: #e2ffba;
 $color3: #64646C;//gray
 $color4: #f2f5f8;//background color
 $color5: #cfcfcf;//light gray
 //theme dark
 $color-dark1: #000000;//black
 $color-dark2: #527e14;//green
+$color-dark2-lighten: #515f3d;
 $color-dark3: #363636;//gray
 $color-dark4: #424242;//background color
 $color-dark5: black;//light gray
 //#f2f5f8
 $color-link: #0096c7;
-$footerheight : 60px;
+$footerheight : 100px;
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 ::-webkit-scrollbar {
@@ -22,6 +24,11 @@ $footerheight : 60px;
 a{
     text-decoration: none !important;
     color: $color-link !important;
+}
+
+.d-content
+{
+    display: contents;
 }
 
 .border-none
@@ -37,12 +44,23 @@ a{
 
 .left-bar-height
 {
-    height: calc(100vh - #{$footerheight}) !important;
+    height: 100vh;
+}
+
+.v-main
+{
+    min-height: calc(100vh - #{$footerheight} - 1px) !important;
+    padding-left:56px !important;
 }
 
 .color-link
 {
     color: $color-link !important;
+}
+
+.cursor-pointer
+{
+    cursor:pointer;
 }
 
 .theme--light
@@ -71,6 +89,10 @@ a{
     {
         background-color: $color2 !important;
     }
+    .bg-color2-lighten
+    {
+        background-color: $color2-lighten !important;
+    }
     .bg-color3
     {
         background-color: $color3 !important;
@@ -90,6 +112,14 @@ a{
     .bg-footer
     {
         background-color: $color1 !important;
+    }
+    .border-bottom-color5
+    {
+        border-bottom: 1px solid $color5;
+    }
+    .hover4:hover
+    {
+        background-color: $color4 !important;
     }
 }
 
@@ -119,6 +149,10 @@ a{
     {
         background-color: $color-dark2 !important;
     }
+    .bg-color2-lighten
+    {
+        background-color: $color-dark2-lighten !important;
+    }
     .bg-color3
     {
         background-color: $color-dark3 !important;
@@ -138,5 +172,13 @@ a{
     .bg-footer
     {
         background-color: $color-dark3 !important;
+    }
+    .border-bottom-color5
+    {
+        border-bottom: 1px solid $color-dark5;
+    }
+    .hover4:hover
+    {
+        background-color: $color-dark4 !important;
     }
 }
